--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <h1>Vamos tocar o som!</h1>
-    <h2>Prof Rafa Garbin</h2>
+    <h2>Maria Fernanda, Gabriel, Andressa, Rafaela </h2>
     <section class="teclado">
         <button class="tecla tecla_aplausos">1</button>
         <button class="tecla tecla_vaia">2</button>
