--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 <body>
 
     <h1>Vamos tocar o som!</h1>
-    <h2>Maria Fernanda, Gabriel, Andressa, Rafaela </h2>
+    <h2> Maria Fernanda, Gabriel, Andressa, Rafaela </h2>
     <section class="teclado">
-        <button class="tecla tecla_aplausos">1</button>
-        <button class="tecla tecla_vaia">2</button>
-        <button class="tecla tecla_risadas">3</button>
+        <button onclick="alert('Eu tô rindo mas é com respeito')" class="tecla tecla_aplausos">1</button>
+        <button onclick="alert('Mo paz')" class="tecla tecla_vaia">2</button>
+        <button onclick="alert('Eitaaa Giovana o forninho caiu')" class="tecla tecla_risadas">3</button>
 
-        <button class="tecla tecla_errado">4</button>
-        <button class="tecla tecla_grilo">5</button>
-        <button class="tecla tecla_tambores">6</button>
+        <button onclick="alert('Não gostei asmei')" class="tecla tecla_errado">4</button>
+        <button onclick="alert('caneta azull azull caneta')" class="tecla tecla_grilo">5</button>
+        <button onclick="alert('o filhaa da putaa')tecla tecla_tambores">6</button>
 
-        <button class="tecla tecla_trombeta">7</button>
+        <button  class="tecla tecla_trombeta">7</button>
         <button class="tecla tecla_dinheiro">8</button>
         <button class="tecla tecla_vitoria">?</button>
     </section>
